--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <header class="startup text-center text-white d-flex">
+    <header class="kunal text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-12 my-auto">
