--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design Bootstrap</title>
+  <title>HMS</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap core CSS -->
@@ -23,6 +23,21 @@
     .view {
       height: 100%;
     }
+     .img { 
+
+
+      /* The image used */
+      background-image: url("image1.jpg");
+    
+
+   
+      height: 100%;
+
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+  
+}
 
     @media (max-width: 559px) {
       html,
@@ -106,11 +121,8 @@
   <!-- Navbar -->
 
   <!-- Full Page Intro -->
-  <div class="view">
+  <div class="view img">
 
-    <video class="video-intro wow fadeInUp" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
-      <source src="vid2.mp4" type="video/mp4">
-    </video>
 
     <!-- Mask & flexbox options-->
     <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
