--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="https://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">
+      <a class="navbar-brand" href="#" target="_blank">
         <strong>HMS</strong>
       </a>
 
@@ -104,10 +104,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">BOOK ROOM</a>
+            <a class="nav-link" href="#" target="_blank">BOOK ROOM</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/getting-started/" target="_blank">ORDER ONLINE</a>
+            <a class="nav-link" href="#" target="_blank">ORDER ONLINE</a>
           </li>
          
         </ul>
