--- a/page1.html
+++ b/page1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+  <title></title>
 </head>
 <body>
-<h1 id="bigOne"></h1>
+<h1>Grill Kitchen<pre id="bigOne"></pre> </h1>
+<h1>Madhuban Resort & Spa<pre id="bigTwo"></pre> </h1>
 
 <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
 <script>
@@ -23,6 +24,10 @@
   var bigOne = document.getElementById('bigOne');
   var dbRef = firebase.database().ref().child('text');
   dbRef.on('value',snap =>bigOne.innerText = snap.val());
+
+  var bigTwo = document.getElementById('bigTwo');
+  var dbRef = firebase.database().ref().child('text1');
+  dbRef.on('value',snap =>bigTwo.innerText = snap.val());
 </script>
 
 </body>
