--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <!--Grid column-->
           <div class=" col-xl-6 mb-4 white-text text-center text-md-left">
 
-            
+              <h1 class="font-weight-bold mt-sm-5 display-3">COMING SOON!!</h1>
 
             <hr class="hr-light">
 
@@ -115,7 +115,8 @@
                   Give it a try, It saves time </h5>
 
             <p class="mb-4 d-none d-md-block">
-               <h4 class="display-3">"Dynamic Hotel Management System(HMS)"</h4>
+               <h4 class="display-4">"Dynamic Hotel Management System"</h4>
+               <h4 class="display-4">(HMS)</h4>
             </p>
 
           </div>
