--- a/page1.html
+++ b/page1.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title></title>
+  <title>cool</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Grill Kitchen<pre id="bigOne"></pre> </h1>
-<h1>Madhuban Resort & Spa<pre id="bigTwo"></pre> </h1>
+  <br><br>
+  <div class="container-fluid">
+
+    <div class="row">
+      <div class="col-sm-4"><h1>Grill Kitchen</h1></div>
+      <div class="col-sm-8"><pre id="bigOne"></pre></div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4"><h1>Madhuban Resort & SPA</h1></div>
+      <div class="col-sm-8"><pre id="bigTwo"></pre></div>
+    </div>
+
+  </div>
+
 
 <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
 <script>
