--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <br><br>
-  <div class="container-fluid">
+  <div class="container">
 
     <div class="row">
       <div class="col-sm-4"><h1>Grill Kitchen</h1></div>
