--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">VIEW WAITING TIME
+            <a class="nav-link" href="page1.html">VIEW WAITING TIME
               <span class="sr-only">(current)</span>
             </a>
           </li>
