--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
       #map {
         height: 200px;  /* The height is 400 pixels */
         width: 300px;  /* The width is the width of the web page */
-         -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+         
        }
 
 
@@ -132,6 +131,14 @@
 
 .btn1:hover {opacity: 1}
 
+.gradient {
+  background: -moz-linear-gradient(45deg, rgba(42, 27, 161, 0.7), rgba(29, 210, 177, 0.7) 100%);
+  background: -webkit-linear-gradient(45deg, rgba(42, 27, 161, 0.7), rgba(29, 210, 177, 0.7) 100%);
+  background: -webkit-gradient(linear, 45deg, from(rgba(42, 27, 161, 0.7)), to(rgba(29, 210, 177, 0.7)));
+  background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.7), rgba(29, 210, 177, 0.7) 100%);
+  background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.7), rgba(29, 210, 177, 0.7) 100%);
+}
+
   </style>
 </head>
 
@@ -169,7 +176,7 @@
   <div class="view full-page-intro parallax" style="background-image: url('sample.jpg'); background-repeat: no-repeat; background-size: cover;">
 
     <!-- Mask & flexbox options-->
-    <div class="mask rgba-cyan-light d-flex justify-content-center align-items-center">
+    <div class="mask gradient d-flex justify-content-center align-items-center">
 
       <!-- Content -->
       <div class="container">
