--- a/index.html
+++ b/index.html
@@ -139,10 +139,77 @@
   background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.5), rgba(29, 210, 177, 0.5) 100%);
 }
 
+.spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+  position: absolute;
+  top: 48%;
+  left: 48%;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #333;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
+
+.spinner-wrapper {
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #000022;
+z-index: 999999;
+}
+
   </style>
 </head>
 
-<body>
+<body onload="myFunction()">
+<!-- preloader -->
+<div id = "loader" class="spinner-wrapper">
+  <div  class="spinner">
+  <div class="double-bounce1"></div>
+  <div class="double-bounce2"></div>
+  <br><br><br>
+  <h1 class = "display-1 d-flex justify-content-center">NAMASTE</h1>
+  
+
+</div>
+</div>
+
+
 
   <!-- Navbar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar ">
@@ -307,6 +374,29 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
     // Animations initialization
     new WOW().init();
   </script>
+
+  <script>
+var myVar;
+
+function myFunction() {
+    myVar = setTimeout(showPage, 2000);
+}
+
+$(window).on("load", function() {
+preloaderFadeOutTime = 400;
+function hidePreloader() {
+var preloader = $(".spinner-wrapper");
+preloader.fadeOut(preloaderFadeOutTime);
+}
+hidePreloader();
+});
+
+function showPage() {
+  document.getElementById("loader").style.display = "none";
+  document.getElementById("myDiv").style.display = "block";
+}
+</script>
+
 </body>
 
 </html>
