--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
   <script>
   
 
-var text = ["Welcome", "NAMASTE", "Hiii!!"];
+var text = ["HOLA", "Hiiii", "NAMASTE"];
 var counter = 0;
 var elem = document.getElementById("changeText");
 var inst = setInterval(change, 500);
