--- a/page1.html
+++ b/page1.html
@@ -33,10 +33,10 @@
 <body>
 
   
-  <br><br>
+  <br><br><br><br>
 
-  <div id = "demo">
-  <div class="container animate-bottom">
+  <div id = "demo" >
+  <div class="container animate-bottom" style="margin-top: 10px";>
 
     <div class="row">
       <div class="col-sm-4"><h1>Grill Kitchen</h1></div>
@@ -56,6 +56,26 @@
     <div class="row">
       <div class="col-sm-4"><h1>Madhuban Resort</h1></div>
       <div class="col-sm-8"><pre id="bigFour"></pre></div>
+    </div>
+
+     <div class="row">
+      <div class="col-sm-4"><h1>Poptos</h1></div>
+      <div class="col-sm-8"><pre id="bigThree"></pre></div>
+    </div>
+
+     <div class="row">
+      <div class="col-sm-4"><h1>Poptos</h1></div>
+      <div class="col-sm-8"><pre id="bigThree"></pre></div>
+    </div>
+
+     <div class="row">
+      <div class="col-sm-4"><h1>Poptos</h1></div>
+      <div class="col-sm-8"><pre id="bigThree"></pre></div>
+    </div>
+
+     <div class="row">
+      <div class="col-sm-4"><h1>Poptos</h1></div>
+      <div class="col-sm-8"><pre id="bigThree"></pre></div>
     </div>
 
   </div>
