--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #333;
+  background-color: #4D5656;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -224,8 +224,8 @@ z-index: 999999;
   <div  class="spinner">
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
-  <br><br><br>
-  <h1 id="changeText" class = " display-1 d-flex justify-content-center"></h1>
+  <br><br><br><br><br>
+  <h1 id="changeText" class = " display-1 d-flex justify-content-center" style="color: #4D5656 ";></h1>
   
 
 </div>
