--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
   <script>
   
 
-var text = ["Holà", "Hiiii", "NAMASTE _/\_"];
+var text = ["Holà", "Hiiii", "NAMASTE"];
 var counter = 0;
 var elem = document.getElementById("changeText");
 var inst = setInterval(change, 500);
