--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>cool</title>
+    <title>Waiting</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -340,7 +340,7 @@ dbRef.on('value',snap =>bigFour.innerText = snap.val());
 </script>
 
 
-<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 <script >
   
