--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@ z-index: 999999;
    
     <div class="pt-4">
      <p class="display-5">This site is made to demonstrate Dynamic Hotel Management System where user can the Guest can see the availaibilty of Rooms , waiting time in Restaurants and order food online </p>
+     <p >© KUNAL PARIKH</p>
 
       
     </div>
