--- a/page1.html
+++ b/page1.html
@@ -37,10 +37,43 @@
     position: absolute;
   left: 10%;
   color:#ffffff ;
+}
 
-    
-   
-  
+
+element.style {
+    margin-top: 50px;
+}
+.animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s;
+}
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+user agent stylesheet
+div {
+    display: block;
+}
+.text-block {
+    position: absolute;
+    left: 10%;
+    color: #ffffff;
+}
+
+.btn-group-vertical>.btn-group:after, .btn-group-vertical>.btn-group:before, .btn-toolbar:after, .btn-toolbar:before, .clearfix:after, .clearfix:before, .container-fluid:after, .container-fluid:before, .container:after, .container:before, .dl-horizontal dd:after, .dl-horizontal dd:before, .form-horizontal .form-group:after, .form-horizontal .form-group:before, .modal-footer:after, .modal-footer:before, .modal-header:after, .modal-header:before, .nav:after, .nav:before, .navbar-collapse:after, .navbar-collapse:before, .navbar-header:after, .navbar-header:before, .navbar:after, .navbar:before, .pager:after, .pager:before, .panel-body:after, .panel-body:before, .row:after, .row:before {
+    display: table;
+    /* content: " "; */
 }
 
   </style>
@@ -49,48 +82,48 @@
 
 <div id="particles-js" >
   <div class="text-block container" > 
-      <br><br><br><br>
+
 
       <div id = "demo" >
        <div class="container animate-bottom" style="margin-top: 50px";>
 
           <div class="row">
-            <div class="col-sm-4"><h1>Grill Kitchen</h1></div>
+            <div class="col-sm-4"><h6>Grill Kitchen</h6></div>
             <div class="col-sm-8"><pre id="bigOne"></pre></div>
           </div>
 
           <div class="row">
-            <div class="col-sm-4"><h1>Dominos</h1></div>
+            <div class="col-sm-4"><h6>Dominos</h6></div>
             <div class="col-sm-8"><pre id="bigTwo"></pre></div>
           </div>
 
           <div class="row">
-            <div class="col-sm-4"><h1>Poptos</h1></div>
+            <div class="col-sm-4"><h6>Poptos</h6></div>
             <div class="col-sm-8"><pre id="bigThree"></pre></div>
           </div>
 
           <div class="row">
-            <div class="col-sm-4"><h1>Madhuban Report</h1></div>
+            <div class="col-sm-4"><h6>Madhuban Report</h6></div>
             <div class="col-sm-8"><pre id="bigFour"></pre></div>
           </div>
 
            <div class="row">
-            <div class="col-sm-4"><h1>Hot & Spicy</h1></div>
+            <div class="col-sm-4"><h6>Hot & Spicy</h6></div>
             <div class="col-sm-8"><pre id="bigThree"></pre></div>
           </div>
 
            <div class="row">
-            <div class="col-sm-4"><h1>Quiches</h1></div>
+            <div class="col-sm-4"><h6>Quiches</h6></div>
             <div class="col-sm-8"><pre id="bigThree"></pre></div>
           </div>
 
            <div class="row">
-            <div class="col-sm-4"><h1>Recharge cafe</h1></div>
+            <div class="col-sm-4"><h6>Recharge cafe</h6></div>
             <div class="col-sm-8"><pre id="bigThree"></pre></div>
           </div>
 
            <div class="row">
-            <div class="col-sm-4"><h1>Khetlapa</h1></div>
+            <div class="col-sm-4"><h6>Khetlapa</h6></div>
             <div class="col-sm-8"><pre id="bigThree"></pre></div>
           </div>
 
