--- a/index.html
+++ b/index.html
@@ -236,10 +236,13 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="page1.html" target="_blank">
+      <a class="navbar-brand" target="_blank">
         <strong class="white-text display-4">HMS</strong>
-      </a>
 
+      </a>
+      <a  href="cms.html">
+        <strong class="white-text justify-content-right align-items-right "  style="text-align: right; font-size: 20px;   font-weight: 400;">' RESTAURANT LOGIN '</strong>
+       </a>
        </div>
 
     </div>
