--- a/index.html
+++ b/index.html
@@ -241,7 +241,11 @@
 
       </a>
       <a  href="cms.html">
-        <strong class="white-text justify-content-right align-items-right "  style="text-align: right; font-size: 20px;   font-weight: 400;">' RESTAURANT LOGIN '</strong>
+        <strong class="white-text justify-content-right align-items-right "  style="text-align: right; font-size: 18px;   font-weight: 380;">
+
+<i class="fa fa-users" aria-hidden="true" style="padding-right: 5px;"></i>
+
+RESTAURANT LOGIN</strong>
        </a>
        </div>
 
