--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
 <style >
   
   .animate-bottom {
@@ -61,7 +62,7 @@ element.style {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-user agent stylesheet
+
 div {
     display: block;
 }
@@ -103,8 +104,12 @@ div {
               <br>
               <br>
           <div class="row">
-            <div class="col-sm-4"><h6>Poptos</h6></div>
+            <div class="col-sm-4"><h6>Poptos</h6>
+              <a href="example.html"><h5>*Click To Reserve a Seat in Advance  <img src="http://www.adit.ac.in/img/new.gif" style="height: 1em; width: 2em"></h5></a></div>
+
+            
             <div class="col-sm-8"><pre id="bigThree"></pre></div>
+            
           </div>
               <br>
               <br>
@@ -149,7 +154,7 @@ div {
 </div>
 
 <!-- database connection -->
-<script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
+
 <!-- <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script> -->
 <script>
 
