--- a/cms.html
+++ b/cms.html
@@ -39,7 +39,23 @@
       background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.5), rgba(29, 210, 177, 0.5) 100%);
       background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.5), rgba(29, 210, 177, 0.5) 100%);
     }
+  .animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
 
+@-webkit-keyframes animatebottom {
+  from { bottom:-30px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-30px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
 
 
     </style>
@@ -66,14 +82,14 @@
   margin-top: auto; margin-bottom: auto; ">
 
   
-<div class="card" style="width: 50%; height: 50%;" >
+<div class="card animate-bottom" style="width: 50%; height: 50%;" >
 
   <h5 class="card-header info-color white-text text-center py-4">
     <strong>Sign In with your Restaurant ID</strong>
   </h5>
 
   <!--Card content-->
-  <div class="card-body px-lg-5 pt-0">
+  <div class="card-body px-lg-5 pt-0 ">
 
     <!-- Form -->
     <div class="text-center" style="color: #757575;">
