--- a/PoptosCMS.html
+++ b/PoptosCMS.html
@@ -5,6 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript">
+  if(!window.parentPage)
+{
+    window.location.href = "https://kunal98p.github.io/cms.html"
+}
+</script>
 <style>
 
 /* Include the padding and border in an element's total width and height */
