--- a/index.html
+++ b/index.html
@@ -211,6 +211,37 @@
     }
 
 
+
+@media screen and (max-width: 600px) {
+  #xx {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 600px) {
+  #xy {
+    font-size: 55px;
+  }
+
+ 
+   
+}
+@media screen and (max-width: 600px) {
+  #zz {
+    font-size: 40px;
+  }
+   #map {
+        height: 100px; 
+        width: 250px;  
+         
+       }
+
+
+
+
+
+}
+
+
   </style>
 </head>
 
@@ -237,13 +268,13 @@
 
       <!-- Brand -->
       <a class="navbar-brand" target="_blank">
-        <strong class="white-text display-4">HMS</strong>
+        <strong class="white-text display-4" id="zz">HMS</strong>
 
       </a>
-      <a  href="cms.html">
-       <strong class="white-text justify-content-right align-items-right "  style="text-align: right; font-size: 18px;   font-weight: 400;">
+      <a  href="cms.html" >
+       <strong class="white-text justify-content-right align-items-right " id ="kk"  style="text-align: right; font-size: 18px;   font-weight: 400;">
 
-<i class="fa fa-users" aria-hidden="true" style="padding-right: 5px;"></i>
+<i class="fa fa-users" aria-hidden="true" style="padding-right: 5px;" ></i>
 
 RESTAURANT LOGIN</strong>
        </a>
@@ -268,7 +299,7 @@ RESTAURANT LOGIN</strong>
           <!--Grid column-->
           <div class=" col-xl-6 mb-4 white-text text-center text-md-left">
 
-            <h1 class="font-weight-bold mt-sm-5 display-3">WELCOME</h1>
+            <h1 class="font-weight-bold mt-sm-5 display-3" id="xy">WELCOME</h1>
 
             <hr class="hr-light">
 
@@ -276,7 +307,7 @@ RESTAURANT LOGIN</strong>
                   Give it a try, It saves time </h5>
 
             <p class="mb-4 d-none d-md-block">
-               <h4 class="display-3">"Dynamic Hotel Management System(HMS)"</h4>
+               <h4 class="display-3" id="xx">"Dynamic Hotel Management System(HMS)"</h4>
             </p>
 
           </div>
@@ -296,7 +327,7 @@ RESTAURANT LOGIN</strong>
               <!--Card content-->
               <div class="card-body">
 
-                 <div id="map" style="color: red; font-size: 25px; margin-top: auto;margin-bottom: auto; text-align: center; font-weight: 550;  ">Please Allow this app Access your Location :\
+                 <div id="map" style="color: red; font-size: 25px; margin-top: auto;margin-bottom: auto; text-align: center; font-weight: 550;">Please Allow this app Access your Location :\
                </div>
                  <br>
 
