--- a/index.html
+++ b/index.html
@@ -15,30 +15,16 @@
   <!-- Your custom styles (optional) -->
   <link href="css/style.min.css" rel="stylesheet">
   <style type="text/css">
-    html,
-    body,
-    header,
-    .view {
-      height: 100%;
-    }
+   
 
-    @media (max-width: 740px) {
-      html,
-      body,
-      header,
-      .view {
-        height: 1000px;
-      }
-    }
-
-    @media (min-width: 800px) and (max-width: 850px) {
+   /* @media (min-width: 800px) and (max-width: 850px) {
       html,
       body,
       header,
       .view {
         height: 650px;
       }
-    }
+    }*/
     @media (min-width: 800px) and (max-width: 850px) {
               .navbar:not(.top-nav-collapse) {
                   background: #1C2331!important;
@@ -276,7 +262,7 @@
 
 <i class="fa fa-users" aria-hidden="true" style="padding-right: 5px;" ></i>
 
-RESTAURANT LOGIN</strong>
+LOGIN</strong>
        </a>
        </div>
 
@@ -297,7 +283,7 @@ RESTAURANT LOGIN</strong>
         <div class="row wow fadeIn">
 
           <!--Grid column-->
-          <div class=" col-xl-6 mb-4 white-text text-center text-md-left">
+          <div class=" col-xl-6 mb-4 white-text text-center text-md-left" style="padding-top: 60px;">
 
             <h1 class="font-weight-bold mt-sm-5 display-3" id="xy">WELCOME</h1>
 
