--- a/cms.html
+++ b/cms.html
@@ -39,6 +39,10 @@
       background: -o-linear-gradient(45deg, rgba(42, 27, 161, 0.5), rgba(29, 210, 177, 0.5) 100%);
       background: linear-gradient(to 45deg, rgba(42, 27, 161, 0.5), rgba(29, 210, 177, 0.5) 100%);
     }
+    @media screen and (max-width: 600px) {
+  #xy {
+     margin-left: -100px; margin-right: -100px; 
+  }
 
 
 
@@ -64,7 +68,7 @@
 
 <div style="display: flex;
   justify-content: center;
-  margin-top: auto; margin-bottom: auto; " >
+  margin-top: auto; margin-bottom: auto;" id="xy" >
 
   
 <div class="card " style="width: 50%; height: 50%;" >
