--- a/cms.html
+++ b/cms.html
@@ -188,7 +188,7 @@ promise.catch(e => alert("Error"));
 
 firebase.auth().onAuthStateChanged(firebaseUser => {
 	if(firebaseUser){
-	window.location = 'new/PoptosCMS.html';	
+	window.location = 'PoptosCMS.html';	
 }
 });
 </script>
