--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     margin-right: 10%;
     text-align: center;
   color: red;
-  padding-top:  50%;
+  padding-top:  40%;
   font-size: 35px ;
   
   
@@ -270,7 +270,7 @@
     margin-right: 10%;
     text-align: center;
   color: red;
-  padding-top:  30%;
+  padding-top:  20%;
   font-size: 20px ;
   
   
@@ -286,7 +286,7 @@
 
 <!-- preloader -->
   <div class="show"  >Sorry! We are Currently Working on Mobile Support :/  </div>
-  <div class="show1"  >Switch to Desktop Version...  </div>
+  <div class="show1"  >Switch to Desktop Version... <span> <br>OR <a href="example.html">kunal98p.github.io/example.html</a> <br>to Reserve your Seat</div>
 
 
 <div id = "loader" class="spinner-wrapper">
