--- a/example.html
+++ b/example.html
@@ -104,6 +104,27 @@ input {
 }
    
 
+@media screen and (max-width: 600px) {
+  .view {
+    background-image: url('pic1.jpg');
+     background-repeat: no-repeat; 
+     background-size: cover;
+      height: 100%;
+
+  }
+  #demo{
+    font-weight: 430;
+    font-size: 20px;
+     margin-left: 10%;
+      margin-right: 10%;
+  }
+  #test2{
+      
+      font-size: 27px;
+     
+  }
+
+
 
 </style>
 </head>
@@ -131,7 +152,8 @@ input {
 
 </div>
 
-
+<br>
+<br>
 
 <h1 id="demo" style="color: green; text-align: center;"></h1>
 
