--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     margin-right: 10%;
     text-align: center;
   color: red;
-  padding-top:  40%;
+  padding-top:  30%;
   font-size: 35px ;
   
   
@@ -272,7 +272,7 @@
   color: red;
   padding-top:  20%;
   font-size: 20px ;
-  
+  margin-bottom: 10%;
   
   }
 }
@@ -286,7 +286,7 @@
 
 <!-- preloader -->
   <div class="show"  >Sorry! We are Currently Working on Mobile Support :/  </div>
-  <div class="show1"  >Switch to Desktop Version... <span> <br>OR <a href="example.html">kunal98p.github.io/example.html</a> <br>to Reserve your Seat</div>
+  <div class="show1"  >Switch to Desktop Version... <span> <br>OR <br> <a href="example.html">kunal98p.github.io/example.html</a> <br>to Reserve your Seat</div>
 
 
 <div id = "loader" class="spinner-wrapper">
