--- a/index.html
+++ b/index.html
@@ -278,6 +278,48 @@
 }
 
 
+@media screen and (max-width: 998px) {
+  .view {
+
+    display: none;
+  }
+  .navbar , footer{
+
+    display: none;
+  }
+  #changeText{
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 998px) {
+  .show {
+
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+  color: red;
+  padding-top:  30%;
+  font-size: 35px ;
+  
+  
+  }
+    .show1{
+
+    display: block;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+  color: red;
+  padding-top:  20%;
+  font-size: 20px ;
+  margin-bottom: 10%;
+  
+  }
+}
+
+
 
   </style>
 </head>
