--- a/page1.html
+++ b/page1.html
@@ -80,6 +80,17 @@ div {
     /* content: " "; */
 }
 
+@media screen and (max-width: 600px) {
+  canvas{
+  	display: none;	
+  }
+
+h6{
+	font-size: 20px;
+}
+
+}
+
   </style>
 </head>
 <body>
